--- a/index.html
+++ b/index.html
@@ -1,148 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sip Savvy - Find Your Perfect Drink</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/lucide@latest"></script>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sip Savvy - Find Your Perfect Drink</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <script src="https://unpkg.com/lucide@latest"></script>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-    <div id="app">
-        <!-- Header -->
-        <header>
-            <div class="container header-content">
-                <div class="logo">
-                    <i data-lucide="glass-water"></i>
-                    Sip Savvy
-                </div>
-                <!-- Main Navigation -->
-                <nav class="main-nav">
-                    <a href="#" class="nav-link active" data-page="home">Home</a>
-                    <a href="#" class="nav-link" data-page="favorites">Favorites</a>
-                    <a href="#" class="nav-link" data-page="about">About Us</a>
-                </nav>
-                <div id="auth-container" class="user-info">
-                    <!-- Auth state populated by JS -->
-                </div>
-            </div>
-        </header>
-
-        <!-- Wrapper for main content and initial view -->
-        <div id="content-wrapper" class="container">
-             <!-- Initial View (Login/Register prompts) -->
-            <div id="initial-view" class="initial-view-container">
-                 <div class="initial-view-content">
-                    <i data-lucide="coffee" class="initial-view-icon"></i>
-                    <h2 class="initial-view-title">Welcome to Sip Savvy</h2>
-                    <p class="initial-view-subtitle">Please log in or register to discover and save your favorite drinks.</p>
-                    <div class="initial-view-actions">
-                        <button id="prompt-login-btn" class="prompt-button prompt-login">Login</button>
-                        <button id="prompt-register-btn" class="prompt-button prompt-register">Register</button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Main Content Area for Pages (logged in) -->
-            <div id="pages-container" class="hidden">
-                <!-- Home Page (Recipe Browser) -->
-                <div id="page-home" class="page-content active">
-                    <div class="main-content">
-                        <button id="mobile-filters-toggle" class="mobile-filters-toggle lg-hidden">
-                            <i data-lucide="filter" class="toggle-icon h-5 w-5"></i>
-                            <span id="toggleText">Show Filters</span>
-                        </button>
-                        <aside id="filters-sidebar" class="filters-sidebar">
-                             <h2 class="filters-title">Find Your Drink</h2>
-                             <p class="filters-subtitle">Adjust preferences to discover recipes.</p>
-                             <div class="search-container">
-                                 <input type="text" id="searchInput" placeholder="Search name, ingredient..." class="search-input">
-                                 <i data-lucide="search" class="search-icon h-5 w-5"></i>
-                             </div>
-                             <div class="filter-selector">
-                                 <label class="filter-label" for="sortSelect"><i data-lucide="arrow-up-down" class="filter-icon h-5 w-5"></i> Sort By</label>
-                                 <div class="select-container">
-                                     <select id="sortSelect" class="filter-select">
-                                         <option value="default">Default</option>
-                                         <option value="name-asc">Name (A-Z)</option>
-                                         <option value="name-desc">Name (Z-A)</option>
-                                         <option value="prepTime-asc">Prep Time (Shortest)</option>
-                                         <option value="prepTime-desc">Prep Time (Longest)</option>
-                                         <option value="difficulty-asc">Difficulty (Easiest)</option>
-                                         <option value="difficulty-desc">Difficulty (Hardest)</option>
-                                     </select>
-                                     <i data-lucide="chevron-down" class="select-arrow h-5 w-5"></i>
-                                 </div>
-                             </div>
-                             <div id="filterSelectors"></div>
-                             <button id="resetFilters" class="reset-filters"><i data-lucide="x" class="reset-icon h-5 w-5"></i> Reset All Filters</button>
-                        </aside>
-                        <main id="recipes-grid" class="recipes-content">
-                            <div id="recipesContainer"></div>
-                        </main>
-                    </div>
-                </div>
-
-                <!-- Favorites Page -->
-                <div id="page-favorites" class="page-content">
-                    <h1 class="page-title">Your Favorite Drinks</h1>
-                    <div id="favoritesContainer" class="recipes-grid-container">
-                        <!-- Favorite recipes will be injected here -->
-                    </div>
-                </div>
-
-                <!-- About Us Page -->
-                <div id="page-about" class="page-content">
-                    <div class="about-us-container">
-                        <h1 class="page-title">About Sip Savvy</h1>
-                        <p>Welcome to Sip Savvy, your personal guide to the world of delicious beverages. Whether you're a coffee connoisseur, a tea enthusiast, or just looking for a refreshing new drink, our collection has something for everyone.</p>
-                        <p>Our mission is to make it easy and fun to discover and create amazing drinks at home. You can browse, filter, and search through our ever-growing library of recipes. Found something you love? Add it to your favorites to easily find it again later!</p>
-                        <p>This project was built with a passion for good drinks and clean code. We hope you enjoy using it as much as we enjoyed building it.</p>
-                        <p>Cheers!</p>
-                    </div>
-                </div>
-            </div>
+  <div id="app">
+    <header>
+      <div class="container header-content">
+        <div class="logo">
+          <i data-lucide="glass-water"></i>
+          Sip Savvy
         </div>
-
-        <!-- Footer -->
-        <footer>
-            <div class="container"><p class="footer-text">&copy; <span id="currentYear"></span> Sip Savvy. All Rights Reserved.</p></div>
-        </footer>
-    </div>
-
-    <!-- Modals (Login, Register, Details) -->
-    <div id="login-modal" class="modal-backdrop hidden">
-        <div class="modal-content">
-            <h2 class="modal-title">Login</h2>
-            <form id="login-form">
-                <div class="input-group"><label for="login-email">Email</label><input type="email" id="login-email" required></div>
-                <div class="input-group"><label for="login-password">Password</label><input type="password" id="login-password" required></div>
-                <button type="submit" class="modal-button">Login</button>
-                <p id="login-error" class="modal-error"></p>
-            </form>
-            <p class="modal-switch">Don't have an account? <a href="#" id="login-switch-to-register">Register</a></p>
-            <button id="login-close" class="modal-close" title="Close Login Modal"><i data-lucide="x"></i></button>
+        <button id="mobile-menu-toggle" class="mobile-menu-toggle lg-hidden" aria-label="Toggle menu">
+          <i data-lucide="menu"></i>
+        </button>
+        <nav class="main-nav">
+          <a href="#" class="nav-link active" data-page="home">Home</a>
+          <a href="#" class="nav-link" data-page="favorites">Favorites</a>
+          <a href="#" class="nav-link" data-page="about">About Us</a>
+        </nav>
+        <nav class="mobile-nav hidden">
+          <a href="#" class="nav-link" data-page="home">Home</a>
+          <a href="#" class="nav-link" data-page="favorites">Favorites</a>
+          <a href="#" class="nav-link" data-page="about">About Us</a>
+        </nav>
+        <div id="auth-container" class="user-info"></div>
+      </div>
+    </header>
+    <div id="content-wrapper" class="container">
+      <div id="initial-view" class="initial-view-container">
+        <div class="initial-view-content">
+          <i data-lucide="coffee" class="initial-view-icon"></i>
+          <h2 class="initial-view-title">Welcome to Sip Savvy</h2>
+          <p class="initial-view-subtitle">Please log in or register to discover and save your favorite drinks.</p>
+          <div class="initial-view-actions">
+            <button id="prompt-login-btn" class="prompt-button prompt-login">Login</button>
+            <button id="prompt-register-btn" class="prompt-button prompt-register">Register</button>
+          </div>
         </div>
-    </div>
-    <div id="register-modal" class="modal-backdrop hidden">
-        <div class="modal-content">
-            <h2 class="modal-title">Create Account</h2>
-            <form id="register-form">
-                <div class="input-group"><label for="register-email">Email</label><input type="email" id="register-email" required></div>
-                <div class="input-group"><label for="register-password">Password (min. 6 characters)</label><input type="password" id="register-password" required></div>
-                <button type="submit" class="modal-button">Register</button>
-                <p id="register-error" class="modal-error"></p>
-            </form>
-            <p class="modal-switch">Already have an account? <a href="#" id="register-switch-to-login">Login</a></p>
-            <button id="register-close" class="modal-close" aria-label="Close Register Modal"><i data-lucide="x"></i></button>
+      </div>
+      <div id="pages-container" class="hidden">
+        <div id="page-home" class="page-content active">
+          <div class="main-content">
+            <button id="mobile-filters-toggle" class="mobile-filters-toggle lg-hidden">
+              <i data-lucide="filter" class="toggle-icon h-5 w-5"></i>
+              <span id="toggleText">Show Filters</span>
+            </button>
+            <aside id="filters-sidebar" class="filters-sidebar">
+              <h2 class="filters-title">Find Your Drink</h2>
+              <p class="filters-subtitle">Adjust preferences to discover recipes.</p>
+              <div class="search-container">
+                <input type="text" id="searchInput" placeholder="Search name, ingredient..." class="search-input" />
+                <i data-lucide="search" class="search-icon h-5 w-5"></i>
+              </div>
+              <div class="filter-selector">
+                <label class="filter-label" for="sortSelect"><i data-lucide="arrow-up-down" class="filter-icon h-5 w-5"></i> Sort By</label>
+                <div class="select-container">
+                  <select id="sortSelect" class="filter-select">
+                    <option value="default">Default</option>
+                    <option value="name-asc">Name (A-Z)</option>
+                    <option value="name-desc">Name (Z-A)</option>
+                    <option value="prepTime-asc">Prep Time (Shortest)</option>
+                    <option value="prepTime-desc">Prep Time (Longest)</option>
+                    <option value="difficulty-asc">Difficulty (Easiest)</option>
+                    <option value="difficulty-desc">Difficulty (Hardest)</option>
+                  </select>
+                  <i data-lucide="chevron-down" class="select-arrow h-5 w-5"></i>
+                </div>
+              </div>
+              <div id="filterSelectors"></div>
+              <button id="resetFilters" class="reset-filters">
+                <i data-lucide="x" class="reset-icon h-5 w-5"></i> Reset All Filters
+              </button>
+            </aside>
+            <main id="recipes-grid" class="recipes-content">
+              <div id="recipesContainer"></div>
+            </main>
+          </div>
         </div>
+        <div id="page-favorites" class="page-content">
+          <h1 class="page-title">Your Favorite Drinks</h1>
+          <div id="favoritesContainer" class="recipes-grid-container"></div>
+        </div>
+        <div id="page-about" class="page-content">
+          <div class="about-us-container">
+            <h1 class="page-title">About Sip Savvy</h1>
+            <p>Welcome to Sip Savvy, your personal guide to the world of delicious beverages. Whether you're a coffee connoisseur, a tea enthusiast, or just looking for a refreshing new drink, our collection has something for everyone.</p>
+            <p>Our mission is to make it easy and fun to discover and create amazing drinks at home.</p>
+            <p>Found something you love? Add it to your favorites to easily find it again later!</p>
+            <p>Cheers!</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div id="recipe-detail-modal" class="hidden">
-         <div class="container recipe-detail-container"></div>
-    </div>
+    <footer>
+      <div class="container"><p class="footer-text">&copy; <span id="currentYear"></span> Sip Savvy. All Rights Reserved.</p></div>
+    </footer>
+  </div>
 
-    <script src="script.js" type="module"></script>
+  <div id="login-modal" class="modal-backdrop hidden">
+    <div class="modal-content">
+      <button id="login-close" class="modal-close" aria-label="Close">
+        <i data-lucide="x"></i>
+      </button>
+      <h2 class="modal-title">Welcome Back</h2>
+      <form id="login-form">
+        <div class="input-group">
+          <label for="login-email">Email</label>
+          <input type="email" id="login-email" name="login-email" required />
+        </div>
+        <div class="input-group">
+          <label for="login-password">Password</label>
+          <input type="password" id="login-password" name="login-password" required />
+        </div>
+        <div id="login-error" class="modal-error"></div>
+        <button type="submit" class="modal-button">Login</button>
+      </form>
+      <div class="modal-switch">
+        Don't have an account? <a href="#" id="login-switch-to-register">Register</a>
+      </div>
+    </div>
+  </div>
+
+  <div id="register-modal" class="modal-backdrop hidden">
+    <div class="modal-content">
+      <button id="register-close" class="modal-close" aria-label="Close">
+        <i data-lucide="x"></i>
+      </button>
+      <h2 class="modal-title">Create Account</h2>
+      <form id="register-form">
+        <div class="input-group">
+          <label for="register-email">Email</label>
+          <input type="email" id="register-email" name="register-email" required />
+        </div>
+        <div class="input-group">
+          <label for="register-password">Password</label>
+          <input type="password" id="register-password" name="register-password" required />
+        </div>
+        <div id="register-error" class="modal-error"></div>
+        <button type="submit" class="modal-button">Register</button>
+      </form>
+      <div class="modal-switch">
+        Already have an account? <a href="#" id="register-switch-to-login">Login</a>
+      </div>
+    </div>
+  </div>
+
+  <div id="recipe-detail-modal" class="modal-backdrop hidden">
+      <div class="recipe-detail-container">
+          </div>
+  </div>
+
+  <script src="script.js" type="module"></script>
 </body>
 </html>
