--- a/index.html
+++ b/index.html
@@ -16,22 +16,23 @@
           <i data-lucide="glass-water"></i>
           Sip Savvy
         </div>
-        <button id="mobile-menu-toggle" class="mobile-menu-toggle lg-hidden" aria-label="Toggle menu">
-          <i data-lucide="menu"></i>
-        </button>
         <nav class="main-nav">
           <a href="#" class="nav-link active" data-page="home">Home</a>
           <a href="#" class="nav-link" data-page="favorites">Favorites</a>
           <a href="#" class="nav-link" data-page="about">About Us</a>
         </nav>
-        <nav class="mobile-nav hidden">
-          <a href="#" class="nav-link" data-page="home">Home</a>
-          <a href="#" class="nav-link" data-page="favorites">Favorites</a>
-          <a href="#" class="nav-link" data-page="about">About Us</a>
-        </nav>
         <div id="auth-container" class="user-info"></div>
+        <button id="mobile-menu-toggle" class="mobile-menu-toggle" aria-label="Toggle menu">
+          <i data-lucide="menu"></i>
+        </button>
       </div>
+      <nav class="mobile-nav hidden">
+        <a href="#" class="nav-link active" data-page="home"><i data-lucide="home"></i> Home</a>
+        <a href="#" class="nav-link" data-page="favorites"><i data-lucide="heart"></i> Favorites</a>
+        <a href="#" class="nav-link" data-page="about"><i data-lucide="info"></i> About Us</a>
+      </nav>
     </header>
+
     <div id="content-wrapper" class="container">
       <div id="initial-view" class="initial-view-container">
         <div class="initial-view-content">
@@ -47,7 +48,7 @@
       <div id="pages-container" class="hidden">
         <div id="page-home" class="page-content active">
           <div class="main-content">
-            <button id="mobile-filters-toggle" class="mobile-filters-toggle lg-hidden">
+            <button id="mobile-filters-toggle" class="mobile-filters-toggle">
               <i data-lucide="filter" class="toggle-icon h-5 w-5"></i>
               <span id="toggleText">Show Filters</span>
             </button>
@@ -96,6 +97,8 @@
             <p>Cheers!</p>
           </div>
         </div>
+        <div id="page-recipe-detail" class="page-content">
+          </div>
       </div>
     </div>
     <footer>
@@ -105,57 +108,31 @@
 
   <div id="login-modal" class="modal-backdrop hidden">
     <div class="modal-content">
-      <button id="login-close" class="modal-close" aria-label="Close">
-        <i data-lucide="x"></i>
-      </button>
+      <button id="login-close" class="modal-close" aria-label="Close"><i data-lucide="x"></i></button>
       <h2 class="modal-title">Welcome Back</h2>
       <form id="login-form">
-        <div class="input-group">
-          <label for="login-email">Email</label>
-          <input type="email" id="login-email" name="login-email" required />
-        </div>
-        <div class="input-group">
-          <label for="login-password">Password</label>
-          <input type="password" id="login-password" name="login-password" required />
-        </div>
+        <div class="input-group"><label for="login-email">Email</label><input type="email" id="login-email" name="login-email" required /></div>
+        <div class="input-group"><label for="login-password">Password</label><input type="password" id="login-password" name="login-password" required /></div>
         <div id="login-error" class="modal-error"></div>
         <button type="submit" class="modal-button">Login</button>
       </form>
-      <div class="modal-switch">
-        Don't have an account? <a href="#" id="login-switch-to-register">Register</a>
-      </div>
+      <div class="modal-switch">Don't have an account? <a href="#" id="login-switch-to-register">Register</a></div>
     </div>
   </div>
-
   <div id="register-modal" class="modal-backdrop hidden">
     <div class="modal-content">
-      <button id="register-close" class="modal-close" aria-label="Close">
-        <i data-lucide="x"></i>
-      </button>
+      <button id="register-close" class="modal-close" aria-label="Close"><i data-lucide="x"></i></button>
       <h2 class="modal-title">Create Account</h2>
       <form id="register-form">
-        <div class="input-group">
-          <label for="register-email">Email</label>
-          <input type="email" id="register-email" name="register-email" required />
-        </div>
-        <div class="input-group">
-          <label for="register-password">Password</label>
-          <input type="password" id="register-password" name="register-password" required />
-        </div>
+        <div class="input-group"><label for="register-email">Email</label><input type="email" id="register-email" name="register-email" required /></div>
+        <div class="input-group"><label for="register-password">Password</label><input type="password" id="register-password" name="register-password" required /></div>
         <div id="register-error" class="modal-error"></div>
         <button type="submit" class="modal-button">Register</button>
       </form>
-      <div class="modal-switch">
-        Already have an account? <a href="#" id="register-switch-to-login">Login</a>
-      </div>
+      <div class="modal-switch">Already have an account? <a href="#" id="register-switch-to-login">Login</a></div>
     </div>
   </div>
-
-  <div id="recipe-detail-modal" class="modal-backdrop hidden">
-      <div class="recipe-detail-container">
-          </div>
-  </div>
-
+  
   <script src="script.js" type="module"></script>
 </body>
 </html>
